Fix some alignments.

--- a/css/700px.less
+++ b/css/700px.less
@@ -121,7 +121,9 @@
   .main-col {
     .panel {
       #percentage > .padding-horizontal(10, 700);
-      //float:none;
+    }
+    .type-1 .panel {
+      float:none;
     }
   }
 
